# cockroach

./: AUTHORS  DEPS.bzl  TEAMS.yaml  go.mod  go.sum
.github/: CODEOWNERS
docs/: test-speedup-plan.md
docs/RFCS/: 20260226_colocated_design_docs.md  20260420_continuous_backup.md  20260503_cluster_fork.md
docs/tech-notes/: batch_split_scatter.md
pkg/: BUILD.bazel
pkg/backup/: BUILD.bazel  backup_job.go  backup_planning.go  restore_job.go  restore_planning.go  revlog_job.go  revlog_job_test.go  schedule_exec.go
pkg/backup/backuppb/: backup.proto
pkg/backup/backupsink/: BUILD.bazel  file_sst_sink.go
pkg/backup/continuous/: BUILD.bazel  checkpoint_writer.go  continuous.go  continuous_test.go  event_codec.go  interfaces.go  persister.go  replay.go  settings.go  shard.go  stop_checker.go
pkg/backup/continuous/continuouspb/: BUILD.bazel  continuous.proto
pkg/ccl/: BUILD.bazel  ccl_init.go
pkg/ccl/backupccl/: backup_processor.go  restore_online.go
pkg/ccl/changefeedccl/: sink_kafka_v2.go
pkg/ccl/changefeedccl/kvfeed/: kv_feed.go  physical_kv_feed.go
pkg/ccl/importccl/: import_processor.go
pkg/ccl/oidcccl/: BUILD.bazel  authorization_oidc_test.go
pkg/cli/: cli.go
pkg/cloud/: impl_registry.go  metrics.go
pkg/cloud/amazon/: s3_storage.go
pkg/clusterversion/: cockroach_versions.go
pkg/cmd/dev/: test.go
pkg/cmd/workload/: BUILD.bazel  main.go
pkg/config/: keys.go
pkg/crosscluster/logical/: create_logical_replication_stmt.go
pkg/crosscluster/physical/: BUILD.bazel  stream_ingestion_job.go
pkg/internal/metricscan/: metric_owners.yaml
pkg/jobs/: adopt.go  job_info_storage.go  registry.go  update.go
pkg/jobs/jobspb/: jobs.proto
pkg/keys/: constants.go  keys.go  printer.go  sql.go
pkg/kv/: batch.go  db.go
pkg/kv/bulk/: BUILD.bazel  buffering_adder.go  cpu_pacer.go  sst_batcher.go
pkg/kv/kvclient/splits/: BUILD.bazel  splits.go
pkg/kv/kvpb/: api.go  api.proto  batch_generated.go  method.go  method_string.go
pkg/kv/kvserver/: BUILD.bazel  api.proto  app_batch.go  bench_batch_split_test.go  client_batch_split_test.go  client_merge_test.go  consistency_queue.go  inconsistency_lease_test.go  merge_queue.go  metrics.go  replica_app_batch.go  replica_application_result.go  replica_application_state_machine.go  replica_command.go  replica_gc_queue.go  replica_proposal.go  replica_raft.go  replica_send.go  storage_services.proto  store.go  store_split.go  stores_server.go
pkg/multitenant/tenantcapabilities/: interfaces.go
pkg/obs/ash/: sampler.go
pkg/obs/statementstore/: statement_store.go
pkg/repstream/streampb/: stream.proto
pkg/revert/: revert.go  revert_test.go
pkg/revlog/: haslog_test.go  reader.go  revlog-format.md  revlog_test.go  tick_writer.go
pkg/revlog/revlogjob/: driver.go  driver_test.go  flow.go  metasink.go  producer.go  progress.go  pts.go  rangefeed.go  tick_manager.go
pkg/revlog/revlogpb/: revlog.proto
pkg/roachpb/: data.go  data.proto  metadata.go  metadata.proto  tenant.go
pkg/roachprod/: roachprod.go
pkg/rpc/: auth_tenant.go
pkg/server/: BUILD.bazel  server_sql.go  span_download.go  status.go
pkg/server/status/: BUILD.bazel  recorder.go  recorder_test.go
pkg/sql/: BUILD.bazel  alter_table.go  conn_executor_exec.go  crdb_internal.go  create_tenant_from_tenant.go  distsql_physical_planner.go  distsql_plan_bulk.go  distsql_plan_csv.go  opaque.go  plan_names.go  relocate.go  schema_changer.go
pkg/sql/catalog/: descriptor.go  table_elements.go
pkg/sql/clusterfork/: BUILD.bazel  clusterfork.go  clusterfork_test.go  main_test.go
pkg/sql/colenc/: encode.go  inverted.go
pkg/sql/colfetcher/: colbatch_direct_scan.go  colbatch_scan.go  index_join.go
pkg/sql/execinfrapb/: data.pb.go  data.proto  processors_bulk_io.proto
pkg/sql/importer/: import_planning.go  import_processor_planning.go  import_stmt_test.go  read_import_base.go
pkg/sql/parser/: parse_test.go  sql.y
pkg/sql/physicalplan/: span_resolver.go
pkg/sql/row/: deleter.go  fetcher.go  inserter.go  kv_batch_fetcher.go  kv_fetcher.go  updater.go  writer.go
pkg/sql/rowcontainer/: row_container.go
pkg/sql/rowenc/: index_encoding.go  index_fetch.go
pkg/sql/rowexec/: indexbackfiller.go  joinreader_span_generator.go
pkg/sql/span/: span_builder.go  span_splitter.go
pkg/storage/: engine.go  mvcc.go  mvcc_test.go  pebble.go
pkg/upgrade/upgrades/: BUILD.bazel  backfill_job_info_table_migration.go  permanent_maybe_setup_pcr_reader.go  v24_3_add_jobs_tables.go
pkg/util/admission/: cpu_time_token_filler.go  cpu_time_token_filler_test.go  group_key.go  resource_group_config_holder_test.go  work_queue.go  work_queue_test.go
pkg/util/ctxgroup/: BUILD.bazel  ctxgroup.go
pkg/util/encoding/: encoding.go
pkg/util/sort/: BUILD.bazel  example_multi_test.go  sort.go  sort_test.go  zsortfunc.go  zsortinterface.go
pkg/workload/schemachange/: error_screening.go  operation_generator.go
scripts/: ci-test-timings.py
(+90 files in other folders)
