load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "continuous",
    srcs = [
        "checkpoint_writer.go",
        "continuous.go",
        "event_codec.go",
        "interfaces.go",
        "persister.go",
        "replay.go",
        "settings.go",
        "shard.go",
        "stop_checker.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/backup/continuous",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/backup/backupbase",
        "//pkg/backup/backupinfo",
        "//pkg/backup/continuous/continuouspb",
        "//pkg/cloud",
        "//pkg/jobs",
        "//pkg/jobs/jobfrontier",
        "//pkg/jobs/jobspb",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvclient/rangefeed",
        "//pkg/kv/kvpb",
        "//pkg/roachpb",
        "//pkg/security/username",
        "//pkg/settings",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/isql",
        "//pkg/storage",
        "//pkg/util/ctxgroup",
        "//pkg/util/hlc",
        "//pkg/util/ioctx",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/span",
        "//pkg/util/stop",
        "//pkg/util/timeutil",
        "//pkg/util/unique",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_cockroachdb_pebble//objstorage",
    ],
)

go_test(
    name = "continuous_test",
    srcs = ["continuous_test.go"],
    embed = [":continuous"],
    deps = [
        "//pkg/backup/continuous/continuouspb",
        "//pkg/jobs/jobspb",
        "//pkg/roachpb",
        "//pkg/settings/cluster",
        "//pkg/storage",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/span",
        "@com_github_cockroachdb_pebble//objstorage",
        "@com_github_stretchr_testify//require",
    ],
)
