load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clusterfork",
    srcs = ["clusterfork.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/clusterfork",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvclient",
        "//pkg/kv/kvpb",
        "//pkg/roachpb",
        "//pkg/util/hlc",
        "//pkg/util/log",
        "//pkg/util/tracing",
        "@com_github_cockroachdb_errors//:errors",
    ],
)

go_test(
    name = "clusterfork_test",
    srcs = [
        "clusterfork_test.go",
        "main_test.go",
    ],
    deps = [
        "//pkg/base",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/roachpb",
        "//pkg/security/securityassets",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/sqlutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/randutil",
        "@com_github_stretchr_testify//require",
    ],
)
